tests/palaiologos/fail/integer_bounds/-2^32+1/rep_putn.asm
rep putn -0ffffffffh
